- 08: Bugfix #853: Batch export with relative paths of and in arr file failed <2>
- 08: Bugfix #854: Topological order of type definitions on export ensured <2>
- 08: Enh. #855 New configurable default array/string sizes for code export <2>
- 08: Bugfix #856: The dump of preferences subsets did not behave correctly <2>
- 08: Bugfix #858: Functions did not actually work in FOR-IN loop headers <2>
- 09: Bugfix #860: Batch export for .arr files containing abs. paths failed <2>
- 09: Issue #861/1: Comment placement on Pascal and Oberon export revised <2>
- 09: Bugfix #861/2: On Pascal import, routine comments were duplicated <2>
- 09: Issue #861/3: Improved comment trimming on code import <2>
- 09: Bugfix #862/2: Batch export no longer produces duplicate entry points <2>
- 09: Bugfix #862/3: Batch import produced defective arrangement lists <2>
- 09: Bugfix #863/1: Duplicate routines on PapDesigner/StrukTex export <2>
- 09: Bugfix #863/2: Wrong assignment symbols in CALLs on PapDesigner export <2>
- 09: Issue #864: Parameter lists had to be transformed for PapDesigner export <2>

Version: 3.30 (2019-10-06)
- 01: Issue #657: Spanish message in German locale replaced <2>
- 01: Enh. #662/1: Info box for groups redesigned into a tree view <2>
- 01: Enh. #662/2: Group visualisation with individual colours in Arranger <2>
- 01: Enh. #662/3: Arranger popup menu item to rearrange diagrams by groups <2>
- 01: Enh. #662/4: Option to save arrangements with relative coordinates <2>
- 01: Bugfix #664: Incorrect handling of modified diagrams on closing Arranger <2>
- 01: Bugfix #664: Disambiguated canceling in AUTO_SAVE_ON_CLOSE mode <2>
- 01: Bugfix #515: Defective diagram positioning in Arranger mended <2>
- 02: Bugfix #665: Import of INSPECT statements from COBOL actually works now <2>
- 02: Bugfix #655: Arranger popup menu revised (item order, accelerator info) <2>
- 02: Bugfix #667: Removal of diagrams from Arranger could leave remnants <2>